test/corpus/conditionals.txt
===
with one instruction
===

if true
  42
end

---
(module
  (conditional
    (if (bool)
      (body
        (number)))))

===
with multiple instructions
===

if true
  42
  24
end

---
(module
  (conditional
    (if (bool)
      (body
        (number) (number)))))

===
with else
===

if true
  42
else
  24
end

---
(module
  (conditional
    (if (bool)
      (body
        (number)))
    (else
      (body
        (number)))))

===
with elseif
===

if true
  42
elseif false
  24
else
  84
end

---
(module
  (conditional
    (if (bool)
      (body
        (number)))
    (elseif (bool)
      (body
        (number)))
    (else
      (body
        (number)))))
